# lineax

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  mkdocs_hook.py  pyproject.toml
.github/workflows/: build_docs.yml  release.yml  run_tests.yml
benchmarks/: gmres_fails_safely.py  lstsq_gradients.py  solver_speeds.py
docs/: faq.md  index.md  requirements.txt
docs/api/: functions.md  linear_solve.md  operators.md  solution.md  solvers.md  tags.md
docs/examples/: classical_solve.ipynb  complex_solve.ipynb  least_squares.ipynb  no_materialisation.ipynb  operators.ipynb  preconditioner.ipynb  structured_matrices.ipynb
lineax/: __init__.py  _custom_types.py  _misc.py  _norm.py  _operator.py  _solution.py  _solve.py  _tags.py
lineax/_solver/: Woodbury.py  __init__.py  bicgstab.py  blocktridiagonal.py  cg.py  cholesky.py  diagonal.py  gauss_seidel.py  gmres.py  jacobi.py  lsmr.py  lu.py  misc.py  normal.py  pivotedqr.py  qr.py  svd.py  triangular.py  tridiagonal.py  woodbury.py
lineax/internal/: __init__.py
tests/: README.md  __main__.py  conftest.py  helpers.py  requirements.txt  test_adjoint.py  test_invert.py  test_jvp.py  test_jvp_jvp.py  test_jvp_jvp1.py  test_jvp_jvp2.py  test_linear_operator.py  test_linear_solve.py  test_lsmr.py  test_misc.py  test_norm.py  test_operator.py  test_singular.py  test_solve.py  test_transpose.py  test_vmap.py  test_vmap_jvp.py  test_vmap_vmap.py  test_well_posed.py
